add subscriber check box

--- a/Ekrut - client/src/fxml/CreateCustomer.fxml
+++ b/Ekrut - client/src/fxml/CreateCustomer.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -38,7 +39,7 @@
                </font>
             </Label>
             <Separator layoutX="75.0" layoutY="42.0" prefHeight="3.0" prefWidth="190.0" />
-            <Button fx:id="btnCreate" alignment="CENTER" contentDisplay="TOP" disable="true" layoutX="95.0" layoutY="333.0" mnemonicParsing="false" onAction="#customerCreate" prefHeight="54.0" prefWidth="183.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create Customer">
+            <Button fx:id="btnCreate" alignment="CENTER" contentDisplay="TOP" disable="true" layoutX="95.0" layoutY="365.0" mnemonicParsing="false" onAction="#customerCreate" prefHeight="54.0" prefWidth="183.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create Customer">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -51,6 +52,7 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -127,6 +129,7 @@
                         <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
                      </GridPane.margin>
                   </Button>
+                  <CheckBox fx:id="chkboxSub" mnemonicParsing="false" text="Subscriber" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -135,14 +138,14 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </opaqueInsets>
             </GridPane>
-            <Label fx:id="lblErr" layoutX="62.0" layoutY="303.0" prefHeight="18.0" prefWidth="249.0" textFill="RED">
+            <Label fx:id="lblErr" layoutX="63.0" layoutY="340.0" prefHeight="18.0" prefWidth="249.0" textFill="RED">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
             <Label layoutX="31.0" layoutY="68.0" text="*" textFill="RED" />
             <Label layoutX="32.0" layoutY="105.0" text="*" textFill="RED" />
-            <Button fx:id="btnReset" alignment="CENTER" contentDisplay="TOP" layoutX="154.0" layoutY="272.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="72.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Reset">
+            <Button fx:id="btnReset" alignment="CENTER" contentDisplay="TOP" layoutX="152.0" layoutY="307.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="72.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Reset">
                <font>
                   <Font name="System Bold" size="9.0" />
                </font>
