--- a/Ekrut - client/src/fxml/CartProduct.fxml
+++ b/Ekrut - client/src/fxml/CartProduct.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="207.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cart.CartCellController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="207.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CartCellController">
    <children>
       <Text fx:id="nameLbl" layoutX="7.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="94.294921875" />
       <Button fx:id="removeBtn" layoutX="112.0" layoutY="7.0" mnemonicParsing="false" onAction="#removePushed" text="-" />
