--- a/Ekrut - client/src/fxml/StockStatusReportScreen.fxml
+++ b/Ekrut - client/src/fxml/StockStatusReportScreen.fxml
@@ -32,7 +32,7 @@
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
          </image>
       </ImageView>
-      <BarChart fx:id="dataBarGraph" layoutX="29.0" layoutY="114.0" prefHeight="322.0" prefWidth="467.0">
+      <BarChart fx:id="dataBarGraph" animated="false" layoutX="29.0" layoutY="114.0" prefHeight="322.0" prefWidth="467.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -53,5 +53,10 @@
       </ImageView>
       <ComboBox fx:id="locationsComboBox" layoutX="355.0" layoutY="76.0" onAction="#getStockStatusReportDetails" prefWidth="150.0" />
       <Label layoutX="249.0" layoutY="80.0" text="Choose Location:" />
+      <Label fx:id="errorLabel" layoutX="526.0" layoutY="80.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
