--- a/Ekrut - client/src/fxml/OrderScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderScreen.fxml
@@ -10,10 +10,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="801.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#onMouseMove" prefHeight="546.0" prefWidth="801.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderScreenController">
    <children>
-      <ListView fx:id="catlogList" layoutX="12.0" layoutY="70.0" prefHeight="338.0" prefWidth="530.0" style="-fx-selection-bar: transparent; -fx-border-color: black;" />
-      <ListView fx:id="cartList" layoutX="559.0" layoutY="70.0" prefHeight="338.0" prefWidth="219.0" style="-fx-border-color: black;" />
+      <ListView fx:id="catlogList" layoutX="12.0" layoutY="70.0" onMouseMoved="#onMouseMove" prefHeight="338.0" prefWidth="530.0" style="-fx-selection-bar: transparent; -fx-border-color: black;" />
+      <ListView fx:id="cartList" layoutX="559.0" layoutY="70.0" onMouseMoved="#onMouseMove" prefHeight="338.0" prefWidth="219.0" style="-fx-border-color: black;" />
       <ImageView fx:id="backBtn" fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="482.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/back%20icon.png" />
