--- a/Ekrut - client/src/fxml/RunningSaleForm.fxml
+++ b/Ekrut - client/src/fxml/RunningSaleForm.fxml
@@ -25,23 +25,18 @@
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="492.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/min-max-close.png" />
-         </image>
-      </ImageView>
       <Button fx:id="btnRun" layoutX="385.0" layoutY="346.0" mnemonicParsing="false" onAction="#runSale" prefHeight="33.0" prefWidth="158.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Run Sale">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Button>
-      <Label fx:id="lblRunningMsg" layoutX="397.0" layoutY="319.0" prefHeight="17.0" prefWidth="166.0" textFill="RED">
+      <ComboBox fx:id="lstSales" layoutX="183.0" layoutY="159.0" onAction="#checkSale" opacity="0.7" prefHeight="25.0" prefWidth="164.0" promptText="Choose sale" style="-fx-background-color: orange;" />
+      <Label fx:id="lblErrSales" layoutX="376.0" layoutY="163.0" prefHeight="17.0" prefWidth="111.0" textFill="RED">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <ComboBox fx:id="lstSales" layoutX="70.0" layoutY="150.0" onAction="#checkSale" opacity="0.7" prefHeight="25.0" prefWidth="164.0" promptText="Choose sale" style="-fx-background-color: orange;" />
-      <Label fx:id="lblErrSales" layoutX="249.0" layoutY="154.0" prefHeight="17.0" prefWidth="243.0" textFill="RED">
+      <Label layoutX="50.0" layoutY="163.0" text="Choose a sale to run:">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
