--- a/Ekrut - client/src/fxml/OrderScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderScreen.fxml
@@ -6,36 +6,59 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="801.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onContextMenuRequested="#onMouseMove" onMouseClicked="#onMouseMove" onMouseDragged="#onMouseMove" onMouseEntered="#onMouseMove" onMouseExited="#onMouseMove" onMouseMoved="#onMouseMove" onMousePressed="#onMouseMove" onMouseReleased="#onMouseMove" onScroll="#onMouseMove" onScrollFinished="#onMouseMove" onScrollStarted="#onMouseMove" prefHeight="546.0" prefWidth="801.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderScreenController">
    <children>
-      <ListView fx:id="catlogList" layoutX="22.0" layoutY="95.0" prefHeight="338.0" prefWidth="530.0" style="-fx-selection-bar: transparent; -fx-border-color: black;" />
-      <ListView fx:id="cartList" layoutX="559.0" layoutY="96.0" prefHeight="338.0" prefWidth="219.0" style="-fx-border-color: black;" />
-      <ImageView fx:id="backBtn" fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="449.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+      <ListView fx:id="catlogList" layoutX="12.0" layoutY="70.0" onContextMenuRequested="#onMouseMove" onMouseClicked="#onMouseMove" onMouseDragged="#onMouseMove" onMouseEntered="#onMouseMove" onMouseExited="#onMouseMove" onMouseMoved="#onMouseMove" onMousePressed="#onMouseMove" onMouseReleased="#onMouseMove" onScroll="#onMouseMove" onScrollFinished="#onMouseMove" onScrollStarted="#onMouseMove" onScrollTo="#onMouseMove" prefHeight="338.0" prefWidth="530.0" style="-fx-selection-bar: transparent; -fx-border-color: black;" />
+      <ListView fx:id="cartList" layoutX="559.0" layoutY="70.0" onContextMenuRequested="#onMouseMove" onMouseClicked="#onMouseMove" onMouseDragged="#onMouseMove" onMouseEntered="#onMouseMove" onMouseExited="#onMouseMove" onMouseMoved="#onMouseMove" onMousePressed="#onMouseMove" onMouseReleased="#onMouseMove" onScroll="#onMouseMove" onScrollFinished="#onMouseMove" onScrollStarted="#onMouseMove" onScrollTo="#onMouseMove" prefHeight="338.0" prefWidth="219.0" style="-fx-border-color: black;" />
+      <ImageView fx:id="backBtn" fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="482.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <Button fx:id="checkoutBtn" alignment="CENTER" contentDisplay="TOP" layoutX="634.0" layoutY="449.0" mnemonicParsing="false" onAction="#checkout" prefHeight="38.0" prefWidth="108.0" style="-fx-background-color: #f54655;" text="Checkout" textFill="WHITE">
+      <Button fx:id="checkoutBtn" alignment="CENTER" contentDisplay="TOP" layoutX="634.0" layoutY="482.0" mnemonicParsing="false" onAction="#checkout" prefHeight="38.0" prefWidth="108.0" style="-fx-background-color: #f54655;" text="Checkout" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <ImageView fitHeight="46.0" fitWidth="43.0" layoutX="598.0" layoutY="446.0" onMouseClicked="#checkout" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="46.0" fitWidth="43.0" layoutX="598.0" layoutY="479.0" onMouseClicked="#checkout" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/checkout%20icon.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" layoutX="559.0" layoutY="60.0" prefHeight="36.0" prefWidth="219.0" text="My Cart" textAlignment="CENTER" textFill="#cf4c0a">
+      <Label alignment="CENTER" layoutX="559.0" layoutY="34.0" prefHeight="36.0" prefWidth="219.0" text="My Cart" textAlignment="CENTER" textFill="#cf4c0a">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="159.0" layoutY="25.0" text="Product Catalog">
+      <Label layoutX="144.0" layoutY="14.0" text="Product Catalog">
          <font>
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Label>
+      <Text layoutX="619.0" layoutY="442.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Price:" wrappingWidth="91.90234375">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="priceText" layoutX="713.0" layoutY="444.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="140.78125">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text fx:id="discountLbl" layoutX="481.0" layoutY="467.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT" wrappingWidth="228.90234375">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="discountPriceText" layoutX="714.0" layoutY="468.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.78125">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Line fx:id="line" endX="74.21875" endY="5.0" layoutX="677.0" layoutY="432.0" startX="-80.78125" startY="5.0" visible="false" />
    </children>
 </AnchorPane>
