--- a/Ekrut - client/src/fxml/OrderMethodForm.fxml
+++ b/Ekrut - client/src/fxml/OrderMethodForm.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -42,57 +41,41 @@
             <Font name="System Bold Italic" size="16.0" />
          </font>
       </RadioButton>
-      <DatePicker layoutX="136.0" layoutY="200.0" prefHeight="26.0" prefWidth="120.0" promptText="Choose a date" />
-      <Label layoutX="32.0" layoutY="203.0" text="Supply Details:">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="32.0" layoutY="244.0" text="Address:">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField layoutX="136.0" layoutY="241.0" prefHeight="26.0" prefWidth="78.0" />
-      <Label layoutX="226.0" layoutY="244.0" text="Street">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField layoutX="271.0" layoutY="241.0" prefHeight="26.0" prefWidth="98.0" />
-      <Label layoutX="382.0" layoutY="244.0" text="House number">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField layoutX="484.0" layoutY="241.0" prefHeight="26.0" prefWidth="30.0" />
-      <Label layoutX="32.0" layoutY="287.0" text="Reciever details:">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField layoutX="196.0" layoutY="284.0" prefHeight="26.0" prefWidth="152.0" />
-      <Label layoutX="359.0" layoutY="287.0" text="Phone">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField layoutX="404.0" layoutY="284.0" prefHeight="26.0" prefWidth="110.0" />
       <Button layoutX="385.0" layoutY="346.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="158.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Proceed to order">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Button>
-      <ComboBox layoutX="149.0" layoutY="109.0" opacity="0.7" prefHeight="25.0" prefWidth="164.0" promptText="Choose location" style="-fx-background-color: orange;" />
-      <Label layoutX="153.0" layoutY="287.0" text="Name">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="105.0" layoutY="244.0" text="City">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
+      <ComboBox fx:id="lstRegions" layoutX="149.0" layoutY="109.0" opacity="0.7" prefHeight="25.0" prefWidth="164.0" promptText="Choose location" style="-fx-background-color: orange;" />
+      <AnchorPane fx:id="apDetails" layoutX="21.0" layoutY="200.0" prefHeight="136.0" prefWidth="357.0" visible="false">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="Supply Details:">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="47.0" text="Address:">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="80.0" text="Reciever details:">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="lstSupplyDate" layoutX="131.0" layoutY="11.0" prefHeight="26.0" prefWidth="160.0" promptText="Choose a date" />
+            <Label fx:id="lblAddress" layoutX="86.0" layoutY="47.0" prefHeight="20.0" prefWidth="278.0" text="Haifa, Neve Sha'anan, Dultchin Arie 5/2">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblRecieverDetails" layoutX="137.0" layoutY="80.0" prefHeight="20.0" prefWidth="219.0" text="Raz Ben - Aharon , 050-5551761">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
